--- a/locale/en_US/author.xml
+++ b/locale/en_US/author.xml
@@ -14,6 +14,17 @@
 
 <locale name="en_US" full_name ="U.S. English">
     
+    	<message key="author.submit.form.fundingSources.required">Provide at least one funding source. If your funding source was not included into the list, select "Other", provide all the institution's information.</message>        
+	<message key="author.submit.form.fundingSources.nameUsed">The name you provided for one of your funding source is already in used by another institution. Please verify if your funding source is not in the list.</message>        
+	<message key="author.submit.form.fundingSources.acronymUsed">The acronym you provided for one of your funding source is already in used by another institution. Please verify if your funding source is not in the list and if not choose another acronym.</message>        
+	<message key="author.submit.form.primarySponsor.required">Select your primary sponsor. If your primary sponsor was not included into the list, select "Other", provide all the institution's information.</message>        
+	<message key="author.submit.form.primarySponsor.nameUsed">The name you provided for your primary sponsor is already in used by another institution. Please verify if your primary sponsor is not in the list.</message>        
+	<message key="author.submit.form.primarySponsor.acronymUsed">The acronym you provided for your primary sponsor is already in used by another institution. Please verify if your primary sponsor is not in the list and if not choose another acronym.</message>        
+	<message key="author.submit.form.secondarySponsors.required">Your secondary sponsor was not in the list and you selected "Other". Provide all the institution's information in order to save it into the database.</message>        
+	<message key="author.submit.form.secondarySponsors.nameUsed">The name you provided for one of your secondary sponsor is already in used by another institution. Please verify if your secondary sponsor is not in the list.</message>        
+	<message key="author.submit.form.secondarySponsors.acronymUsed">The acronym you provided for one of your secondary sponsor is already in used by another institution. Please verify if your secondary sponsor is not in the list and if not choose another acronym.</message>        
+	<message key="author.submit.form.sponsors.differentNameAcronym">It seems that one of your funding source is the same as one of your sponsors and provided the information twice. However the names or acronyms do not match (same names but different acronyms or same acronyms but different names).</message>        
+
         
 	<message key="author.submit.form.pdfRequired">The completion report should be uploaded in a PDF format. Please convert the report and submit it again.</message>        
 	<message key="author.submit.form.fileTooBig">The completion report should not exceed 20 Mb.</message>        
